# FileSQL

./: Cargo.toml  build.rs
core/: Cargo.toml
core/src/: lib.rs
sql/: Cargo.toml
sql/src/: lib.rs
src/: main.rs
