[package]
name = "filesql"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"

[workspace]
members = [".", "core", "sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesql-core = { path = "./core", version = "*" }
filesql-sql = { path = "./sql", version = "*" }
clap = { version = "4.2.7", features = ["derive"] }
rustyline = "11.0.0"


[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "git", "gitcl", "sysinfo"] }
